# flint

./: .Rbuildignore  DESCRIPTION  DESCRIPTION.in  NAMESPACE  README.md  TODO.org  cleanup  cleanup.win  configure  configure.ac  configure.win
R/: 00_Class.R  00_Generic.R  00_Utils.R  S3.R  acb.R  acb_calc.R  acb_dirichlet.R  acb_hypgeom.R  acb_special.R  acf.R  arb.R  arb_calc.R  arb_constant.R  arb_special.R  arf.R  arf_calc.R  asVector.R  conditions.R  flint.R  fmpq.R  fmpz.R  foreign.R  mag.R  random.R  slong.R  subscript.R  ulong.R  utils.R  zzz.R
inst/: NEWS.Rd
man/: Constants.Rd  OptionalCharacter-class.Rd  Part.Rd  TypeClass.Rd  acb-class.Rd  acb_dirichlet_lerch_phi.Rd  acb_dirichlet_zeta.Rd  acb_hypgeom_2f1.Rd  acb_hypgeom_gamma.Rd  acb_lambertw.Rd  acf-class.Rd  arb-class.Rd  arb_dirichlet_zeta.Rd  arb_hypgeom_2f1.Rd  arb_hypgeom_bessel_j.Rd  arb_hypgeom_gamma.Rd  arb_hypgeom_gamma_lower.Rd  arb_integrate.Rd  arb_lambertw.Rd  arf-class.Rd  arf_rk.Rd  asVector.Rd  c.flint.Rd  flint-class.Rd  flint-defunct.Rd  flint-deprecated.Rd  flint-notyet.Rd  flint-package.Rd  fmpq-class.Rd  fmpz-class.Rd  format-methods.Rd  initialize-methods.Rd  mag-class.Rd  nflint-class.Rd  slong-class.Rd  ulong-class.Rd
src/: Makevars  Makevars.in  Makevars.win  R_flint.h  acb.c  acb_calc.c  acb_dirichlet.c  acb_hypgeom.c  acb_special.c  acb_template.c  acb_template.h  acf.c  acf.h  arb.c  arb_calc.c  arb_constant.c  arb_special.c  arb_template.c  arb_template.h  arf.c  arf_calc.c  coerce.c  config.h.in  fallback.c  fallback.h  flint-win.def  flint.c  flint.h  fmpq.c  fmpz.c  foreign.c  init.c  mag.c  noreturn.h  revertnoreturn.h  slong.c  ulong.c  utils.c  version.c
tests/: acb_hypgeom.R  acb_hypgeom_2f1.R  all.equal.R  ambiguity.R  attrib.R  bind.R  coerce.R  data.frame.R  data.frame.Rout.save  foreign.R  format.R  hypgeom.R  initialize.R  is.finite.R  match.R  print.R  print.Rout.save  reg-tests.R  regr-tests.R  rep.R  seq.R  sort.R  special.R  subscript.R  summary.R
